<resources>
    <string name="app_name">BasketballCounter</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>'
    <string name="button_height">60dp</string>
    <string name="button_width">120dp</string>
    <string name="teamBScore">0</string>
    <string name="teamAScore">0</string>
    <string name="plus3_text">+3 points</string>
    <string name="plus2_text">+2 points</string>
    <string name="plus1_text">Free throw</string>
    <string name="reset_text">Reset</string>
    <string name="stat_text">Stat</string>
    <string name="difference">0</string>
    <string name="score_difference_text">A is leading by</string>
    <string name="go_back_to_main_activity">Update Stat</string>
    <string name="score_difference">0</string>
    <string name="item_game_score">0</string>
    <string name="display_text">DISPLAY</string>
    <string name="save_text">SAVE</string>
    <string name="weather_info">Weather is lit bro</string>
</resources>