<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_basketball"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="500dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.49"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/team_A_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:cropToPadding="true"
                android:scaleType="centerInside">

            </ImageView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

            <ImageButton
                android:id="@+id/team_A_camera"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@android:drawable/ic_menu_camera">

            </ImageButton>


                <ImageButton
                    android:id="@+id/team_A_cheer"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:src="@android:drawable/ic_btn_speak_now">

            </ImageButton>

            </LinearLayout>

            <TextView
                android:id="@+id/team_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/teamA"
                android:textSize="30sp">

            </TextView>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/teamAScore"
                android:textSize="50sp">

            </TextView>

            <Button
                android:id="@+id/plus3_button_teamA"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/plus3_text">

            </Button>

            <Button
                android:id="@+id/plus2_button_teamA"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/plus2_text">

            </Button>

            <Button
                android:id="@+id/plus1_button_teamA"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/plus1_text">

            </Button>


        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray">

        </View>


        <LinearLayout
            android:layout_weight=".49"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/team_B_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

            </ImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/team_B_camera"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:src="@android:drawable/ic_menu_camera">

                </ImageButton>

                <ImageButton
                    android:id="@+id/team_B_cheer"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:src="@android:drawable/ic_btn_speak_now">

                </ImageButton>

            </LinearLayout>

            <TextView
                android:id="@+id/team_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                android:text="@string/teamB">

            </TextView>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text = "@string/teamBScore"
                android:textSize="50sp">

            </TextView>

            <Button
                android:id="@+id/plus3_button_teamB"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text = "@string/plus3_text">

            </Button>


            <Button
                android:id="@+id/plus2_button_teamB"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text = "@string/plus2_text">

            </Button>

            <Button
                android:id="@+id/plus1_button_teamB"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text = "@string/plus1_text">

            </Button>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text = "@string/reset_text">

    </Button>

    <Button
        android:id="@+id/stat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/stat_text">

    </Button>

        <Button
            android:id="@+id/displayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/display_text">

        </Button>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save_text">

        </Button>

    </LinearLayout>

    <TextView
        android:id="@+id/score_difference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:text="@string/score_difference"
        android:layout_gravity="center">

    </TextView>



</LinearLayout>